<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/marimo_name_stats"
            android:textSize="14sp"
            android:textColor="#6A6A6A"
            android:layout_marginBottom="4dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/txtName"
            android:text="@string/mochi"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="#000000"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/change_frequency_stats"
                    android:textSize="14sp"
                    android:textColor="#6A6A6A"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/txtFreq"
                    android:text="@string/every_14_days"
                    android:textStyle="bold"
                    android:textColor="#E47A1F"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/last_changed"
                    android:textSize="14sp"
                    android:textColor="#6A6A6A"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/txtLastChanged"
                    android:text="@string/oct_30"
                    android:textStyle="bold"
                    android:textColor="#E47A1F"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/notes"
            android:textColor="#6A6A6A"
            android:textSize="14sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/txtNotes"
            android:text="@string/my_first_marimo_very_round_and_bouncy"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginTop="4dp"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
