<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/marimoCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="6dp"
    app:strokeWidth="3dp"
    android:backgroundTint="#F2F2F2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_health_score"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#000"/>


        <!-- HEALTH BOX -->
        <LinearLayout
            android:id="@+id/healthContainer"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/bg_health_box">

            <TextView
                android:id="@+id/healthValue"
                android:text="@string/_19"
                android:textSize="48sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/healthTotal"
                android:text="@string/out_of_19"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!-- BOTTOM INFO -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/last_changed"
                    android:textColor="#6D6D6D"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/frequencyText"
                    android:text="@string/nov_25_2025"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/next_change"
                    android:textColor="#6D6D6D"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/totalChangesText"
                    android:text="@string/dec_16_2025"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
