<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/splashImageView"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:src="@drawable/ic_marimo"
            android:contentDescription="@string/img"/>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="#000000"
            android:paddingTop="12dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/subtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_your_little_friends"
            android:textSize="14sp"
            android:textColor="@color/marimo_accent"
            android:paddingTop="4dp"
            android:visibility="gone"/>

    </LinearLayout>

</FrameLayout>
